# quizapp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: test-writer.md
.claude/hooks/: pre-commit-check.sh
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.claude/skills/run-checks/: SKILL.md
.claude/skills/seed-data/: SKILL.md
alembic/: env.py
alembic/versions/: ebc9fd2f5f49_initial_schema.py
app/: main.py
app/attempts/: controller.py  models.py  repository.py  schemas.py  scoring.py  service.py
app/core/: config.py  deps.py  errors.py  logging.py
app/db/: session.py
app/notifications/: email.py  models.py  repository.py  service.py  worker.py
app/quizzes/: controller.py  models.py  repository.py  schemas.py  service.py
app/users/: controller.py  models.py  repository.py  schemas.py  service.py
scripts/: seed.py
tests/: conftest.py
tests/integration/: test_openapi.py  test_seed.py
tests/integration/attempts/: test_attempt_detail_controller.py  test_attempts_controller.py  test_submit_attempt_controller.py
tests/integration/notifications/: test_notification_enqueue.py
tests/integration/quizzes/: test_quiz_controller.py
tests/integration/users/: test_users_controller.py
tests/unit/: test_sanity.py
tests/unit/attempts/: test_attempt_service.py  test_scoring.py
tests/unit/notifications/: test_email.py  test_notification_service.py  test_worker.py
(+2 files in other folders)
